--- a/src/app/wheel/wheel.component.css
+++ b/src/app/wheel/wheel.component.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .wheel-container p {
@@ -14,4 +16,14 @@
     flex-direction: row;
     align-items: center;
     margin-left: 40px;
+    max-width: 100%;
+}
+
+@media (max-width: 767px) {
+    .canvas-container {
+        margin-left: 20px;
+    }
+    .wheel-container p {
+        font-size: 1.2em;
+    }
 }
